# node-emgucv-autoit-generator

./: .gitignore  .gitmodules  EnumParser.js  ExportsParser.js  README.md  autoit-converter.js  emgucv.patch  generate.js  package-lock.json  package.json  test.js
autoit-addon/: CMakeLists.txt  DeviceInfo.cpp  addon.au3  addon.cpp  addon_utils.au3  autoitdef.h  build.bat  vector_DeviceInfo.au3
emgucv-autoit-bindings/: CVConstants.au3  CVEConstants.au3  CVEUtils.au3  CVEtypes_c.au3  CVTag.au3  cv_constants.au3  cv_enums.au3  cv_interface.au3  cve_core.au3  cve_extra.au3  cve_world.au3
emgucv-autoit-bindings/Emgu.CV.Extern/: dataLogger.au3  emgu_c.au3  photo_edit.au3  pointUtil.au3  quaternions.au3  tiffio_c.au3  vector_Byte.au3  vector_ColorPoint.au3  vector_CvString.au3  vector_DMatch.au3  vector_Double.au3  vector_ERStat.au3  vector_Float.au3  vector_GMat.au3  vector_GpuMat.au3  vector_Int.au3  vector_KeyLine.au3  vector_KeyPoint.au3  vector_Mat.au3  vector_OclPlatformInfo.au3  vector_Point.au3  vector_Point3D32F.au3  vector_PointF.au3  vector_Rect.au3  vector_RotatedRect.au3  vector_Size.au3  vector_TesseractResult.au3  vector_Triangle2DF.au3  vector_UMat.au3  vector_VectorOfByte.au3  vector_VectorOfDMatch.au3  vector_VectorOfERStat.au3  vector_VectorOfInt.au3  vector_VectorOfPoint.au3  vector_VectorOfPoint3D32F.au3  vector_VectorOfPointF.au3  vector_VectorOfRect.au3  vector_VideoCapture.au3  vectors_c.au3  zlibCompression.au3
emgucv-autoit-bindings/Emgu.CV.Extern/alphamat/: alphamat_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/aruco/: aruco_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/barcode/: barcode_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/bgsegm/: bgsegm_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/bioinspired/: bioinspired_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/calib3d/: calib3d_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/core/: core_c_extra.au3  core_cuda_c.au3  file_node_property.au3  gpumat_property.au3  input_array_property.au3  mat_c.au3  mat_property.au3  moments_property.au3  ocl_c.au3  ocl_device_property.au3  ocl_kernel_property.au3  ocl_platform_info_property.au3  optim_c.au3  output_array_property.au3  umat_c.au3  umat_property.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudaarithm/: cudaarithm_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudabgsegm/: cudabgsegm_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudacodec/: cudacodec_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudafeatures2d/: cudafeatures2d_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudafilters/: cudafilters_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudaimgproc/: cuda_hough_lines_detector_property.au3  cudaimgproc_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudalegacy/: cudalegacy_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudaobjdetect/: cuda_cascade_classifier_property.au3  cuda_hog_property.au3  cudaobjdetect_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudaoptflow/: cudaoptflow_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudastereo/: cudastereo_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/cudawarping/: cudawarping_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/depthai/: FrameMetadata_property.au3  depthai_c.au3  device_property.au3  hostDataPacket_property.au3
emgucv-autoit-bindings/Emgu.CV.Extern/dnn/: DetectionModel_property.au3  TextDetectionModel_DB_property.au3  TextDetectionModel_EAST_property.au3  TextRecognitionModel_property.au3  dnn_c.au3  layer_property.au3  net_property.au3
emgucv-autoit-bindings/Emgu.CV.Extern/dnn_objdetect/: dnn_objdetect_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/dnn_superres/: dnn_superres_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/dpm/: dpm_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/face/: face_c.au3  facemarkaam_params_property.au3  facemarklbf_params_property.au3
emgucv-autoit-bindings/Emgu.CV.Extern/features2d/: MSER_property.au3  SimpleBlobDetector_property.au3  features2d_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/flann/: flann_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/freetype/: freetype_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/fuzzy/: fuzzy_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/gapi/: gapi_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/hdf/: hdf_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/hfs/: hfs_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/highgui/: highgui_c_extra.au3
emgucv-autoit-bindings/Emgu.CV.Extern/img_hash/: img_hash_c_extra.au3
emgucv-autoit-bindings/Emgu.CV.Extern/imgcodecs/: imgcodecs_c_extra.au3
emgucv-autoit-bindings/Emgu.CV.Extern/imgproc/: IntelligentScissorsMB_property.au3  LineIterator_property.au3  imgproc_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/intensity_transform/: intensity_transform_c.au3
emgucv-autoit-bindings/Emgu.CV.Extern/line_descriptor/: line_descriptor_c.au3
libemgucv-includes/Emgu.CV.Extern/: vector_Byte.h  vector_ColorPoint.h  vector_CvString.h  vector_DMatch.h  vector_Double.h  vector_ERStat.h  vector_Float.h  vector_GMat.h  vector_GpuMat.h  vector_Int.h  vector_KeyLine.h  vector_KeyPoint.h  vector_Mat.h  vector_OclPlatformInfo.h  vector_Point.h  vector_Point3D32F.h  vector_PointF.h  vector_Rect.h  vector_RotatedRect.h  vector_Size.h  vector_TesseractResult.h  vector_Triangle2DF.h  vector_UMat.h  vector_VectorOfByte.h  vector_VectorOfDMatch.h  vector_VectorOfERStat.h  vector_VectorOfInt.h  vector_VectorOfPoint.h  vector_VectorOfPoint3D32F.h  vector_VectorOfPointF.h  vector_VectorOfRect.h  vector_VideoCapture.h
libemgucv-includes/opencv/: factory_parallel.hpp  parallel.hpp  plugin_parallel_api.hpp  plugin_parallel_wrapper.impl.hpp  registry_parallel.hpp  registry_parallel.impl.hpp
samples/: 01-show-image.au3  02-show-image-gui.au3  02.1-show-image-gui-autosize.au3  03-show-screen-image.au3  04-find-template.au3  05.1-video-capture-camera.au3  05.1-video-capture-file.au3  06.1-rotate-image.au3  06.2-rotate-image-bound.au3
samples/autoit-addon/: CMakeLists.txt  OpenCVConfig.cmake  addon.cpp  addon.h  build.bat
scripts/: build.js  version.js
src/: EnumParser.js  ExportsParser.js  autoit-converter.js  options.js
(+190 files in other folders)
